# kernel_float

./: .buildinfo  .clang-format  .gitignore  .zenodo.json  CMakeLists.txt  Makefile  README.md  api.html  combine.py  example.cu  genindex.html  guides.html  index.html  license.html  objects.inv  search.html  searchindex.js
.github/workflows/: cmake-action.yml  cmake-run-cuda.yml  cmake-run-hip.yml  cmake.yml  docs.yml
_sources/: api.rst.txt  guides.rst.txt
_sources/api/: binary_operators.rst.txt  conditional.rst.txt  conversion.rst.txt  fast_math.rst.txt  generation.rst.txt  iteration.rst.txt  mathematical.rst.txt  memory_read_write.rst.txt  primitives.rst.txt  reductions.rst.txt  shuffling.rst.txt  types.rst.txt  unary_operators.rst.txt  utilities.rst.txt
_sources/guides/: accuracy.md.txt  constant.md.txt  memory.md.txt  prelude.md.txt  promotion.md.txt
api/: binary_operators.html  conditional.html  conversion.html  fast_math.html  generation.html  iteration.html  mathematical.html  memory_read_write.html  primitives.html  reductions.html  shuffling.html  types.html  unary_operators.html  utilities.html
docs/: Doxyfile.in  api.rst  build_api.py  conf.py  guides.rst  index.rst
docs/guides/: accuracy.md  cache_modifiers.md  constant.md  example.md  generate_promotion_table.py  introduction.md  promotion.md  promotion.rst  promotion_table.csv
examples/: CMakeLists.txt  hip_compat.h
examples/pi/: CMakeLists.txt  main.cu
examples/vector_add/: CMakeLists.txt  main.cu
examples/vector_add_tiling/: CMakeLists.txt  main.cu
guides/: accuracy.html  cache_modifiers.html  constant.html  example.html  introduction.html  memory.html  prelude.html  promotion.html
include/: kernel_float.h
include/kernel_float/: all.h  apply.h  approx.h  base.h  bf16.h  binary.h  binops.h  broadcast.h  cast.h  complex.h  constant.h  conversion.h  core.h  fp16.h  fp8.h  interface.h  iterate.h  macros.h  memory.h  meta.h  prelude.h  reduce.h  storage.h  swizzle.h  tensor.h  tiling.h  triops.h  types.h  unary.h  unops.h  vector.h
kernel_tuner/: example.cu  example.py  vector_add.cu  vector_add.py
single_include/: kernel_float.h
tests/: CMakeLists.txt  basic.cu  basics.cu  binops.cu  broadcast.cu  cast.cu  common.h  constant.cu  iterate.cu  memory.cu  promotion.cu  reduce.cu  swizzle.cu  tiling.cu  triops.cu  unops.cu
tests_codegen/: approx_ops.cu  bf16_ops.cu  fast_ops.cu  half_ops.cu  vectorized_load.cu  vectorized_store.cu  verify_codegen.py
